videostore und price aus Atest ausgelagert und getestet

--- a/ErlernenVonTDDmitMocks/alltest-results.html
+++ b/ErlernenVonTDDmitMocks/alltest-results.html
@@ -14,6 +14,7 @@ xmlns="http://www.w3.org/TR/REC-html40">
 <link rel=colorSchemeMapping href="alltests-Dateien/colorschememapping.xml">
 <!--[if gte mso 9]><xml>
  <w:WordDocument>
+  <w:View>Print</w:View>
   <w:SpellingState>Clean</w:SpellingState>
   <w:GrammarState>Clean</w:GrammarState>
   <w:TrackMoves>false</w:TrackMoves>
@@ -693,6 +694,7 @@ span.SpellE
 	font-size:10.0pt;
 	mso-ansi-font-size:10.0pt;
 	mso-bidi-font-size:10.0pt;
+	font-family:"Calibri",sans-serif;
 	mso-ascii-font-family:Calibri;
 	mso-hansi-font-family:Calibri;
 	mso-bidi-font-family:Calibri;}
@@ -738,78 +740,238 @@ div.WordSection1
 <table class=MsoNormalTable border=0 cellspacing=0 cellpadding=0
  style='border-collapse:collapse;mso-yfti-tbllook:1184;mso-padding-alt:0cm 0cm 0cm 0cm'>
  <tr style='mso-yfti-irow:0;mso-yfti-firstrow:yes'>
-  <td width=604 colspan=2 valign=top style='width:453.1pt;border:solid windowtext 1.0pt;
+  <td width=603 colspan=3 valign=top style='width:452.6pt;border:solid windowtext 1.0pt;
   padding:0cm 5.4pt 0cm 5.4pt'>
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
-  normal'><span class=SpellE>customer.Pricing</span></p>
+  normal'><span class=SpellE>fit_ness.Pricing</span></p>
   </td>
  </tr>
  <tr style='mso-yfti-irow:1'>
-  <td width=302 valign=top style='width:226.55pt;border:solid windowtext 1.0pt;
+  <td width=211 valign=top style='width:158.3pt;border:solid windowtext 1.0pt;
   border-top:none;mso-border-top-alt:solid windowtext 1.0pt;padding:0cm 5.4pt 0cm 5.4pt'>
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
   normal'><span class=SpellE>daysRented</span></p>
   </td>
-  <td width=302 valign=top style='width:226.55pt;border-top:none;border-left:
+  <td width=216 valign=top style='width:161.8pt;border-top:none;border-left:
   none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
   mso-border-top-alt:solid windowtext 1.0pt;padding:0cm 5.4pt 0cm 5.4pt'>
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
   normal'><span class=SpellE>regularPrice</span>()</p>
   </td>
+  <td width=177 valign=top style='width:132.5pt;border-top:none;border-left:
+  none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
+  mso-border-top-alt:solid windowtext 1.0pt;padding:0cm 0cm 0cm 0cm'>
+  <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
+  normal'><span class=SpellE>newRelease</span>()</p>
+  </td>
  </tr>
  <tr style='mso-yfti-irow:2'>
-  <td width=302 valign=top style='width:226.55pt;border:solid windowtext 1.0pt;
+  <td width=211 valign=top style='width:158.3pt;border:solid windowtext 1.0pt;
   border-top:none;padding:0cm 5.4pt 0cm 5.4pt'>
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
   normal'>1</p>
   </td>
-  <td width=302 valign=top style='width:226.55pt;border-top:none;border-left:
+  <td width=216 valign=top style='width:161.8pt;border-top:none;border-left:
   none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
-  padding:0cm 5.4pt 0cm 5.4pt' bgcolor="#ffcfcf">1.50 <font size=-1 color="#c08080"><i>expected</i></font><hr>0.0 <font size=-1 color="#c08080"><i>actual</i></font></td>
+  padding:0cm 5.4pt 0cm 5.4pt' bgcolor="#cfffcf">
+  <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
+  normal'>1.50</p>
+  </td>
+  <td width=177 valign=top style='width:132.5pt;border-top:none;border-left:
+  none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
+  padding:0cm 0cm 0cm 0cm' bgcolor="#cfffcf">
+  <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
+  normal'>2.00</p>
+  </td>
  </tr>
  <tr style='mso-yfti-irow:3'>
-  <td width=302 valign=top style='width:226.55pt;border:solid windowtext 1.0pt;
+  <td width=211 valign=top style='width:158.3pt;border:solid windowtext 1.0pt;
   border-top:none;padding:0cm 5.4pt 0cm 5.4pt'>
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
   normal'>2</p>
   </td>
-  <td width=302 valign=top style='width:226.55pt;border-top:none;border-left:
+  <td width=216 valign=top style='width:161.8pt;border-top:none;border-left:
   none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
-  padding:0cm 5.4pt 0cm 5.4pt' bgcolor="#ffcfcf">1.50 <font size=-1 color="#c08080"><i>expected</i></font><hr>0.0 <font size=-1 color="#c08080"><i>actual</i></font></td>
+  padding:0cm 5.4pt 0cm 5.4pt' bgcolor="#cfffcf">
+  <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
+  normal'>1.50</p>
+  </td>
+  <td width=177 valign=top style='width:132.5pt;border-top:none;border-left:
+  none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
+  padding:0cm 0cm 0cm 0cm' bgcolor="#cfffcf">
+  <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
+  normal'>2.00</p>
+  </td>
  </tr>
  <tr style='mso-yfti-irow:4'>
-  <td width=302 valign=top style='width:226.55pt;border:solid windowtext 1.0pt;
+  <td width=211 valign=top style='width:158.3pt;border:solid windowtext 1.0pt;
   border-top:none;padding:0cm 5.4pt 0cm 5.4pt'>
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
   normal'>3</p>
   </td>
-  <td width=302 valign=top style='width:226.55pt;border-top:none;border-left:
+  <td width=216 valign=top style='width:161.8pt;border-top:none;border-left:
   none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
-  padding:0cm 5.4pt 0cm 5.4pt' bgcolor="#ffcfcf">1.50 <font size=-1 color="#c08080"><i>expected</i></font><hr>0.0 <font size=-1 color="#c08080"><i>actual</i></font></td>
+  padding:0cm 5.4pt 0cm 5.4pt' bgcolor="#cfffcf">
+  <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
+  normal'>1.50</p>
+  </td>
+  <td width=177 valign=top style='width:132.5pt;border-top:none;border-left:
+  none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
+  padding:0cm 0cm 0cm 0cm' bgcolor="#cfffcf">
+  <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
+  normal'>3.75</p>
+  </td>
  </tr>
  <tr style='mso-yfti-irow:5'>
-  <td width=302 valign=top style='width:226.55pt;border:solid windowtext 1.0pt;
+  <td width=211 valign=top style='width:158.3pt;border:solid windowtext 1.0pt;
   border-top:none;padding:0cm 5.4pt 0cm 5.4pt'>
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
   normal'>4</p>
   </td>
-  <td width=302 valign=top style='width:226.55pt;border-top:none;border-left:
+  <td width=216 valign=top style='width:161.8pt;border-top:none;border-left:
   none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
-  padding:0cm 5.4pt 0cm 5.4pt' bgcolor="#ffcfcf">3.00 <font size=-1 color="#c08080"><i>expected</i></font><hr>0.0 <font size=-1 color="#c08080"><i>actual</i></font></td>
+  padding:0cm 5.4pt 0cm 5.4pt' bgcolor="#cfffcf">
+  <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
+  normal'>3.00</p>
+  </td>
+  <td width=177 valign=top style='width:132.5pt;border-top:none;border-left:
+  none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
+  padding:0cm 0cm 0cm 0cm' bgcolor="#cfffcf">
+  <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
+  normal'>5.50</p>
+  </td>
  </tr>
  <tr style='mso-yfti-irow:6;mso-yfti-lastrow:yes'>
-  <td width=302 valign=top style='width:226.55pt;border:solid windowtext 1.0pt;
+  <td width=211 valign=top style='width:158.3pt;border:solid windowtext 1.0pt;
   border-top:none;padding:0cm 5.4pt 0cm 5.4pt'>
   <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
   normal'>5</p>
   </td>
-  <td width=302 valign=top style='width:226.55pt;border-top:none;border-left:
+  <td width=216 valign=top style='width:161.8pt;border-top:none;border-left:
   none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
-  padding:0cm 5.4pt 0cm 5.4pt' bgcolor="#ffcfcf">4.50 <font size=-1 color="#c08080"><i>expected</i></font><hr>0.0 <font size=-1 color="#c08080"><i>actual</i></font></td>
+  padding:0cm 5.4pt 0cm 5.4pt' bgcolor="#cfffcf">
+  <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
+  normal'>4.50</p>
+  </td>
+  <td width=177 valign=top style='width:132.5pt;border-top:none;border-left:
+  none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
+  padding:0cm 0cm 0cm 0cm' bgcolor="#cfffcf">
+  <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
+  normal'>7.25</p>
+  </td>
  </tr>
 </table>
 
 <p class=MsoNormal>&nbsp;</p>
+
+<table class=MsoNormalTable border=0 cellspacing=0 cellpadding=0
+ style='border-collapse:collapse;mso-yfti-tbllook:1184;mso-padding-alt:0cm 0cm 0cm 0cm'>
+ <tr style='mso-yfti-irow:0;mso-yfti-firstrow:yes'>
+  <td width=603 colspan=3 valign=top style='width:452.6pt;border:solid windowtext 1.0pt;
+  padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
+  normal'><span class=SpellE>fit.ActionFixture</span><o:p></o:p></p>
+  </td>
+ </tr>
+ <tr style='mso-yfti-irow:1'>
+  <td width=197 valign=top style='width:147.9pt;border:solid windowtext 1.0pt;
+  border-top:none;mso-border-top-alt:solid windowtext 1.0pt;padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
+  normal'><span class=SpellE>start</span><o:p></o:p></p>
+  </td>
+  <td width=406 colspan=2 valign=top style='width:304.7pt;border-top:none;
+  border-left:none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
+  mso-border-top-alt:solid windowtext 1.0pt;padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
+  normal'><span class=SpellE>fit_ness.MovieAdministrator</span><o:p></o:p></p>
+  </td>
+ </tr>
+ <tr style='mso-yfti-irow:2'>
+  <td width=197 valign=top style='width:147.9pt;border:solid windowtext 1.0pt;
+  border-top:none;padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
+  normal'>press<o:p></o:p></p>
+  </td>
+  <td width=406 colspan=2 valign=top style='width:304.7pt;border-top:none;
+  border-left:none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
+  padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
+  normal'><span class=SpellE>new</span> <span class=SpellE>movie</span><o:p></o:p></p>
+  </td>
+ </tr>
+ <tr style='mso-yfti-irow:3'>
+  <td width=197 valign=top style='width:147.9pt;border:solid windowtext 1.0pt;
+  border-top:none;padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
+  normal'>check<o:p></o:p></p>
+  </td>
+  <td width=209 valign=top style='width:156.6pt;border-top:none;border-left:
+  none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
+  padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
+  normal'><span class=SpellE>movie</span> <span class=SpellE>number</span><o:p></o:p></p>
+  </td>
+  <td width=197 valign=top style='width:148.1pt;border-top:none;border-left:
+  none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
+  padding:0cm 0cm 0cm 0cm' bgcolor="#cfffcf">
+  <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
+  normal'>1<o:p></o:p></p>
+  </td>
+ </tr>
+ <tr style='mso-yfti-irow:4'>
+  <td width=197 valign=top style='width:147.9pt;border:solid windowtext 1.0pt;
+  border-top:none;padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
+  normal'><span class=SpellE>enter</span><o:p></o:p></p>
+  </td>
+  <td width=209 valign=top style='width:156.6pt;border-top:none;border-left:
+  none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
+  padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
+  normal'><span class=SpellE>movie</span> title<o:p></o:p></p>
+  </td>
+  <td width=197 valign=top style='width:148.1pt;border-top:none;border-left:
+  none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
+  padding:0cm 0cm 0cm 0cm'>
+  <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
+  normal'>Pulp Fiction<o:p></o:p></p>
+  </td>
+ </tr>
+ <tr style='mso-yfti-irow:5'>
+  <td width=197 valign=top style='width:147.9pt;border:solid windowtext 1.0pt;
+  border-top:none;padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
+  normal'><span class=SpellE>enter</span><o:p></o:p></p>
+  </td>
+  <td width=209 valign=top style='width:156.6pt;border-top:none;border-left:
+  none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
+  padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
+  normal'><span class=SpellE>price</span> <span class=SpellE>category</span><o:p></o:p></p>
+  </td>
+  <td width=197 valign=top style='width:148.1pt;border-top:none;border-left:
+  none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
+  padding:0cm 0cm 0cm 0cm'>
+  <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
+  normal'><span class=SpellE>regular</span> <span class=SpellE>price</span><o:p></o:p></p>
+  </td>
+ </tr>
+ <tr style='mso-yfti-irow:6;mso-yfti-lastrow:yes'>
+  <td width=197 valign=top style='width:147.9pt;border:solid windowtext 1.0pt;
+  border-top:none;padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
+  normal'>press<o:p></o:p></p>
+  </td>
+  <td width=406 colspan=2 valign=top style='width:304.7pt;border-top:none;
+  border-left:none;border-bottom:solid windowtext 1.0pt;border-right:solid windowtext 1.0pt;
+  padding:0cm 5.4pt 0cm 5.4pt'>
+  <p class=MsoNormal style='margin-bottom:0cm;margin-bottom:.0001pt;line-height:
+  normal'>save<o:p></o:p></p>
+  </td>
+ </tr>
+</table>
+
+<p class=MsoNormal><o:p>&nbsp;</o:p></p>
 
 </div>
 
